<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#343a4a"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/totalItemsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="Number of Items: 100" />

        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="Cart Price: 100" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/staticTotalPriceTextView"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/total_price"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/staticPlusImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/staticTotalPriceTextView"
            android:contentDescription="@string/increment_product"
            android:src="@drawable/btn_add"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/staticQuantityTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/staticPlusImageView"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/qty"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/staticMinusImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/staticQuantityTextView"
            android:contentDescription="@string/decrement_product"
            android:src="@drawable/btn_minus"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/staticMinusImageView"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/products"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/productsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />
</LinearLayout>