<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#cdcfd2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="70dp"
            android:layout_height="@dimen/cart_product_row_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:gravity="center|end"
            android:padding="5dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            tools:text="Rs 100" />

        <ImageView
            android:contentDescription="@string/increment_product"
            android:id="@+id/plusImageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/cart_product_row_height"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/totalPriceTextView"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:src="@drawable/btn_add" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="40dp"
            android:layout_height="@dimen/cart_product_row_height"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/plusImageView"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/zero"
            android:textColor="@color/dark_red"
            android:textSize="16sp" />

        <ImageView
            android:contentDescription="@string/decrement_product"
            android:id="@+id/minusImageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/cart_product_row_height"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/quantityTextView"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:src="@drawable/btn_minus" />

        <LinearLayout
            android:id="@+id/productDetailView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cart_product_row_height"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/minusImageView"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/productNameTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:gravity="start"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="Microwave Oven" />

            <TextView
                android:id="@+id/unitPriceTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:gravity="start"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="Unit Price" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cdcfd2" />
</LinearLayout>

